examples/type_system/failing/184_type_expr_missing_close_paren.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn bad(x: (Int, String -> Int { x }
let after = 1
